// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectForm renders 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Add
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action={undefined}
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <input
          aria-describedby="timeframe-hint"
          className=""
          disabled={false}
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <input
          aria-describedby="roles-hint"
          className=""
          disabled={false}
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Alpha/Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live/Operational
        </label>
      </fieldset>
      <fieldset>
        <legend>
          Council service?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="animal"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Animal Management"
        />
        <label
          htmlFor="animal"
        >
          Animal Management
        </label>
        <input
          checked={false}
          disabled={false}
          id="planning"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Planning"
        />
        <label
          htmlFor="planning"
        >
          Planning
        </label>
        <input
          checked={false}
          disabled={false}
          id="community"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Community Services"
        />
        <label
          htmlFor="community"
        >
          Community Services
        </label>
        <input
          checked={false}
          disabled={false}
          id="roads"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Roads and parking"
        />
        <label
          htmlFor="roads"
        >
          Roads and parking
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Outline the Aims
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
        >
          Describe how it ran
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue=""
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <input
          aria-describedby="refereeName-hint"
          className=""
          disabled={false}
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <input
          aria-describedby="refereePosition-hint"
          className=""
          disabled={false}
          id="refereePosition"
          maxLength={undefined}
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm the above information is correct and will be publicly available on the Digital Marketplace
        </label>
      </div>
      <input
        type="submit"
        value="Publish Project"
      />
    </form>
  </article>
</div>
`;

exports[`ProjectForm renders empty in edit mode 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Edit
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action={undefined}
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <input
          aria-describedby="timeframe-hint"
          className=""
          disabled={false}
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <input
          aria-describedby="roles-hint"
          className=""
          disabled={false}
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Alpha/Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live/Operational
        </label>
      </fieldset>
      <fieldset>
        <legend>
          Council service?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="animal"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Animal Management"
        />
        <label
          htmlFor="animal"
        >
          Animal Management
        </label>
        <input
          checked={false}
          disabled={false}
          id="planning"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Planning"
        />
        <label
          htmlFor="planning"
        >
          Planning
        </label>
        <input
          checked={false}
          disabled={false}
          id="community"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Community Services"
        />
        <label
          htmlFor="community"
        >
          Community Services
        </label>
        <input
          checked={false}
          disabled={false}
          id="roads"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Roads and parking"
        />
        <label
          htmlFor="roads"
        >
          Roads and parking
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Outline the Aims
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
        >
          Describe how it ran
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue=""
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <input
          aria-describedby="refereeName-hint"
          className=""
          disabled={false}
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <input
          aria-describedby="refereePosition-hint"
          className=""
          disabled={false}
          id="refereePosition"
          maxLength={undefined}
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm the above information is correct and will be publicly available on the Digital Marketplace
        </label>
      </div>
      <input
        type="submit"
        value="Save Changes"
      />
    </form>
  </article>
</div>
`;

exports[`ProjectForm renders with errors 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Add
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      aria-describedby="validation-masthead-heading"
      className="callout--warning"
      role="alert"
      tabIndex="-1"
    >
      <h4
        id="validation-masthead-heading"
      >
        There was a problem with the details you gave
      </h4>
      <ul>
        <li>
          <a
            href="#title"
          >
            Title is required
          </a>
        </li>
        <li>
          <a
            href="#client"
          >
            Council is required
          </a>
        </li>
        <li>
          <a
            href="#timeframe"
          >
            Timeframe is required
          </a>
        </li>
        <li>
          <a
            href="#roles"
          >
            You must specify the your business' role
          </a>
        </li>
        <li>
          <a
            href="#discovery"
          >
            You must provide project stage
          </a>
        </li>
        <li>
          <a
            href="#animal"
          >
            You must provide project service
          </a>
        </li>
        <li>
          <a
            href="#opportunity"
          >
            You must outline the aims
          </a>
        </li>
        <li>
          <a
            href="#approach"
          >
            You must outline how it ran
          </a>
        </li>
        <li>
          <a
            href="#outcome"
          >
            You must provide at least one outcome.
          </a>
        </li>
        <li>
          <a
            href="#refereeName"
          >
            Please provide a referee name.
          </a>
        </li>
        <li>
          <a
            href="#refereePosition"
          >
            Please provide a referee position.
          </a>
        </li>
        <li>
          <a
            href="#refereeEmail"
          >
            Please provide a referee email address.
          </a>
        </li>
        <li>
          <a
            href="#refereeContact"
          >
            Please acknowledge the referee can be contacted.
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <a
          className="validation-message"
          href="#title"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Title is required
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <a
          className="validation-message"
          href="#client"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Council is required
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <a
          className="validation-message"
          href="#timeframe"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Timeframe is required
          </span>
        </a>
        <input
          aria-describedby="timeframe-hint"
          className="invalid"
          disabled={false}
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <a
          className="validation-message"
          href="#roles"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must specify the your business' role
          </span>
        </a>
        <input
          aria-describedby="roles-hint"
          className="invalid"
          disabled={false}
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <a
          className="validation-message"
          href="#discovery"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must provide project stage
          </span>
        </a>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Alpha/Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live/Operational
        </label>
      </fieldset>
      <fieldset>
        <legend>
          Council service?
        </legend>
        <a
          className="validation-message"
          href="#animal"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must provide project service
          </span>
        </a>
        <input
          checked={false}
          disabled={false}
          id="animal"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Animal Management"
        />
        <label
          htmlFor="animal"
        >
          Animal Management
        </label>
        <input
          checked={false}
          disabled={false}
          id="planning"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Planning"
        />
        <label
          htmlFor="planning"
        >
          Planning
        </label>
        <input
          checked={false}
          disabled={false}
          id="community"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Community Services"
        />
        <label
          htmlFor="community"
        >
          Community Services
        </label>
        <input
          checked={false}
          disabled={false}
          id="roads"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Roads and parking"
        />
        <label
          htmlFor="roads"
        >
          Roads and parking
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Outline the Aims
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <a
          className="validation-message"
          href="#opportunity"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must outline the aims
          </span>
        </a>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="invalid under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
        >
          Describe how it ran
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <a
          className="validation-message"
          href="#approach"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must outline how it ran
          </span>
        </a>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="invalid under-200"
            defaultValue=""
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <a
          className="validation-message"
          href="#outcome"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must provide at least one outcome.
          </span>
        </a>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box invalid"
                defaultValue=""
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box invalid"
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <a
          className="validation-message"
          href="#refereeName"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Please provide a referee name.
          </span>
        </a>
        <input
          aria-describedby="refereeName-hint"
          className="invalid"
          disabled={false}
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <a
          className="validation-message"
          href="#refereePosition"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Please provide a referee position.
          </span>
        </a>
        <input
          aria-describedby="refereePosition-hint"
          className="invalid"
          disabled={false}
          id="refereePosition"
          maxLength={undefined}
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's email
        </label>
        <a
          className="validation-message"
          href="#refereeEmail"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Please provide a referee email address.
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          disabled={false}
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <a
          className="validation-message"
          href="#refereeContact"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Please acknowledge the referee can be contacted.
          </span>
        </a>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm the above information is correct and will be publicly available on the Digital Marketplace
        </label>
      </div>
      <input
        type="submit"
        value="Publish Project"
      />
    </form>
  </article>
</div>
`;

exports[`ProjectForm renders with form_options 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Add
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action="/foo/bar"
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <input
          aria-describedby="timeframe-hint"
          className=""
          disabled={false}
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <input
          aria-describedby="roles-hint"
          className=""
          disabled={false}
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Alpha/Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live/Operational
        </label>
      </fieldset>
      <fieldset>
        <legend>
          Council service?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="animal"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Animal Management"
        />
        <label
          htmlFor="animal"
        >
          Animal Management
        </label>
        <input
          checked={false}
          disabled={false}
          id="planning"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Planning"
        />
        <label
          htmlFor="planning"
        >
          Planning
        </label>
        <input
          checked={false}
          disabled={false}
          id="community"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Community Services"
        />
        <label
          htmlFor="community"
        >
          Community Services
        </label>
        <input
          checked={false}
          disabled={false}
          id="roads"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Roads and parking"
        />
        <label
          htmlFor="roads"
        >
          Roads and parking
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Outline the Aims
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
        >
          Describe how it ran
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue=""
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <input
          aria-describedby="refereeName-hint"
          className=""
          disabled={false}
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <input
          aria-describedby="refereePosition-hint"
          className=""
          disabled={false}
          id="refereePosition"
          maxLength={undefined}
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm the above information is correct and will be publicly available on the Digital Marketplace
        </label>
      </div>
      <input
        type="submit"
        value="Publish Project"
      />
    </form>
  </article>
</div>
`;

exports[`ProjectForm renders with populated fields 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Add
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action="https://httpbin.org/post"
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value="The Client Name"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <input
          aria-describedby="timeframe-hint"
          className=""
          disabled={false}
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value="January 2016 — June 2016"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <input
          aria-describedby="roles-hint"
          className=""
          disabled={false}
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Alpha/Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live/Operational
        </label>
      </fieldset>
      <fieldset>
        <legend>
          Council service?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="animal"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Animal Management"
        />
        <label
          htmlFor="animal"
        >
          Animal Management
        </label>
        <input
          checked={false}
          disabled={false}
          id="planning"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Planning"
        />
        <label
          htmlFor="planning"
        >
          Planning
        </label>
        <input
          checked={false}
          disabled={false}
          id="community"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Community Services"
        />
        <label
          htmlFor="community"
        >
          Community Services
        </label>
        <input
          checked={false}
          disabled={false}
          id="roads"
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Roads and parking"
        />
        <label
          htmlFor="roads"
        >
          Roads and parking
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Outline the Aims
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue="The opportunity"
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            198 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
        >
          Describe how it ran
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue="The approach"
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            198 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue="Outcome 1"
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue="Outcome 2"
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <input
          aria-describedby="refereeName-hint"
          className=""
          disabled={false}
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <input
          aria-describedby="refereePosition-hint"
          className=""
          disabled={false}
          id="refereePosition"
          maxLength={undefined}
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm the above information is correct and will be publicly available on the Digital Marketplace
        </label>
      </div>
      <input
        type="submit"
        value="Publish Project"
      />
    </form>
  </article>
</div>
`;
